scripts/nullaway/wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8.txt
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:255: error: [NullAway] dereferenced expression e.getMessage() is @Nullable
            if (!e.getMessage().equals(errmsg)) {
                               ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:291: error: [NullAway] passing @Nullable parameter 'resHolder' where @NonNull is required
        checkAdd(s, resHolder, 0, 0, null, null, null, errmsg);
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:291: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        checkAdd(s, resHolder, 0, 0, null, null, null, errmsg);
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:316: error: [NullAway] dereferenced expression strs is @Nullable
        if (strs.length != check.length) {
                ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:391: error: [NullAway] dereferenced expression ss is @Nullable
                verify(ss.equals(namelist[i]), "have name '" + ss + "', expecting '" + namelist[i] + "'");
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:406: error: [NullAway] dereferenced expression rngCheck is @Nullable
                rngCheck[i++].check(ra);
                        ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:408: error: [NullAway] dereferenced expression rec.getHelpMsg() is @Nullable
            verify(rec.getHelpMsg().equals(helpMsg), "helpMsg=" + rec.getHelpMsg() + ", expecting " + helpMsg);
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:593: error: [NullAway] dereferenced expression result is @Nullable
        verify(result.equals(check), "result " + result + " vs. " + check);
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:649: error: [NullAway] dereferenced expression result is @Nullable
                verify(result.equals(check), "result [" + i + "] " + result + " vs. " + check);
                             ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:744: error: [NullAway] dereferenced expression vec is @Nullable
                verify(vec.size() == resultIdx + 1, "Expecting result vector size " + (resultIdx + 1));
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java:796: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        test.checkAdd("-help, -h %h #here is how we help you", null, 'h', 1, new String[] { "-help ", "-h " }, null, "here is how we help you", null);
                                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:1227: error: [NullAway] dereferenced expression result is @Nullable
            if (result.getClass().isArray()) {
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:1299: error: [NullAway] passing @Nullable parameter 'sval' where @NonNull is required
                            ((ArgHolder<String>) result).setValue(sval);
                                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:1862: error: [NullAway] dereferenced expression nameTail is @Nullable
                nameTail.next = ndesc;
                        ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:2488: error: [NullAway] dereferenced expression ((ArgHolder<Boolean>) result) is @Nullable
                            ((ArgHolder<Boolean>) result).setValue(true);
                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:2501: error: [NullAway] dereferenced expression e.getMessage() is @Nullable
                                if (e.getMessage().contains("malformed boolean")) {
                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:2503: error: [NullAway] dereferenced expression ((ArgHolder<Boolean>) result) is @Nullable
                                    ((ArgHolder<Boolean>) result).setValue(true);
                                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:2515: error: [NullAway] dereferenced expression ((ArgHolder<Boolean>) result) is @Nullable
                    ((ArgHolder<Boolean>) result).setValue(Boolean.valueOf(rec.vval));
                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:2518: error: [NullAway] dereferenced expression ((boolean[]) result) is @Nullable
                        ((boolean[]) result)[k] = rec.vval;
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:2554: error: [NullAway] dereferenced expression a is @Nullable
        for (i = 0; i < Math.min(a.length(), b.length()); i++) {
                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:2554: error: [NullAway] dereferenced expression b is @Nullable
        for (i = 0; i < Math.min(a.length(), b.length()); i++) {
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgHolder.java:146: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.defaultValue = this.value = null;
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgHolder.java:146: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.defaultValue = this.value = null;
                                       ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgHolder.java:184: error: [NullAway] dereferenced expression o is @Nullable
        if (o.getClass().equals(ArgHolder.class)) {
             ^
    (see http://t.uber.com/nullaway )
../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgHolder.java:290: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        setValue(null);
                 ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParserTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
25 errors
